--- a/views/admin_page.ejs
+++ b/views/admin_page.ejs
@@ -3,49 +3,110 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/png" href="/static/shopping-mall-icon-16-167840.png">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-          crossorigin="anonymous">
+    <title>Document</title>
     <style>
-        img {
-            width: 100%;
+        * {
+            padding: 0;
+            margin: 0;
+        }
+        
+        body {
+            padding: 0;
+            margin: 0;
+        }
+        
+        .container-fluid {
+            padding: 0;
+            margin: 0;
+        }
+        
+        .side-panel {
+            background-color: rgb(227, 224, 224);
+            position: static;
+            min-height: 100%;
         }
     </style>
-    <title>Mongo File Uploads</title>
 </head>
 
-<body>
-<div class="container">
-    <div class="row">
-        <div class="col-md-6 m-auto">
-            <h1 class="text-center display-4 my-4">Mongo File Uploads</h1>
-            <form action="/upload" method="POST" enctype="multipart/form-data">
-                <div class="custom-file mb-3">
-                    <input type="file" name="file" id="file" class="custom-file-input">
-                    <label for="file" class="custom-file-label">Choose File</label>
-                </div>
-                <div class="mb-3">
-                    <label for="filmname" class="form-label" >Name</label>
-                    <input type="text" class="form-control name input" id="filmname"  name="filmname" aria-describedby="emailHelp" placeholder="">
-                </div>
-                <div class="mb-3">
-                    <label for="descr" class="form-label" >Description</label>
-                    <input type="text" class="form-control description input" name="description"  id="descr">
-
-                </div>
-                <input type="submit" value="Submit" class="btn btn-primary btn-block">
-            </form>
+<body class="d-flex h-100">
+    <div class="container-fluid  w-25  h-100  ">
+        <div class="d-flex w-100 flex-column align-items-center">
+            <div class="admin-image" style="width:100px; height:100px">
+                <img src='/static/assets/userpage/blank-avatar.jpg' class="h-100 w-100">
+            </div>
+            <div class>admin</div>
+            <ul class="side-panel-functions ">
+                <li class="functions-item">
+                    <a class="item-link" href="adminpage/userManager">list of users</a>
+                </li>
+                <li class="functions-item">
+                    <a class="item-link">offers</a>
+                </li>
+            </ul>
         </div>
     </div>
-</div>
 
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
+    <div class="container container-dark bg-dark">
+        <thead>
+            <tr>
+                <th scope="col">#</th>
+                <th scope="col">avatar</th>
+                <th scope="col">Email</th>
+                <th scope="col">password</th>
+            </tr>
+        </thead>
+        <%let i = 1%>
+            <%users.forEach((user)=>{ %>
+                <table class="table table-dark">
+
+                    <tbody>
+                        <tr>
+                            <th scope="row">
+                                <%=i++%>
+                            </th>
+                            <td>
+                                <div contenteditable>
+                                    <%=user.email%>
+                                </div>
+                            </td>
+                            <td>
+                                <div contenteditable>
+                                    <%=user.email%>
+                                </div>
+                            </td>
+                            <td>
+                                <div contenteditable>
+                                    <%=user.name%>
+                                </div>
+                            </td>
+                            <td>
+                                <button class="btn btn-primary" method="post"><a class="text-white"href="admin_page/edit/<%=user.email%>">edit</a></button>
+                                <button class="btn btn-danger" method="post"><a class="text-white"href="/adminpage/delete-user/<%=user.email%>">delete</a></button>
+                            </td>
+                        </tr>
+                    </tbody>
+
+                    <%})%>
+                </table>
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </body>
 
 </html>
