--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="icon" type="image/png" href="/static/shopping-mall-icon-16-167840.png">
     <script src="https://api-maps.yandex.ru/2.1/?apikey=55a7ca77-4d7d-46f0-8f7c-04e870f2f6f8&lang=ru_RU" type="text/javascript">
     </script>
     <script type="text/javascript">
