--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,101 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <title>Title</title>
+    <link rel="icon" type="image/png" href="/static/shopping-mall-icon-16-167840.png">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <style>
-    *{
+    * {
         margin: 0;
         padding: 0;
     }
-
-    body{
-        margin:0;
+    
+    body {
+        margin: 0;
         padding: 0;
         height: 100vh;
         /*display: flex;*/
         /*justify-content: center;*/
         /*align-items: center;*/
-        background: rgb(9,121,97);
-        background: linear-gradient(90deg, rgba(9,121,97,1) 0%, rgba(2,0,36,1) 41%, rgba(8,97,85,1) 91%);
-
+        background: rgb(9, 121, 97);
+        background: linear-gradient(90deg, rgba(9, 121, 97, 1) 0%, rgba(2, 0, 36, 1) 41%, rgba(8, 97, 85, 1) 91%);
         background-size: 100%;
     }
-    .container{
-
-    }
-    .registration_intro{
+    
+    .container {}
+    
+    .registration_intro {
         font-size: 40px;
         line-height: 50px;
     }
-    .registration_container{
+    
+    .registration_container {
         background-color: #f5f5dc;
-        width:600px;
+        width: 600px;
         display: flex;
         flex-direction: column;
-        align-items:center;
+        align-items: center;
         justify-content: center;
         border-radius: 20px;
         padding: 50px 0px;
-
     }
-    input{
-
+    
+    input {
         background: #FFFFFF;
         border: 1.53407px solid rgba(0, 0, 0, 0.1);
         box-sizing: border-box;
         border-radius: 15.3407px;
         height: 40px;
         min-width: 300px;
-
     }
-
-
 </style>
-<body class="d-flex justify-content-center align-items-center">
-<div class="registration_container">
-    <!--            <h1 class="registration_intro">-->
-    <!--                Create An Account</h1>-->
-    <!--            <div class="registration_title">Create an account to enjoy all the services without any ads for free!</div>-->
-    <!--            <form>-->
-    <!--                <input type = "email" name="email" class="input input_email" placeholder="Email">-->
-    <!--                <input type = "password" name="password" class="input input_password" placeholder="password">-->
-    <!--            </form>-->
-    <h1 class="heading">Login</h1>
-    <% if(typeof success_msg !== 'undefined'){ %>
-    <div class="alert alert-success alert-dismissible fade show" role="alert" style="width: fit-content; height: fit-content; padding: 0">
-        <%=success_msg%>
-    </div>
-    <%}%>
-    <% if(typeof error !== 'undefined'){ %>
-    <div class="alert alert-danger" role="alert" style="width: fit-content; height: fit-content; padding: 0">
-        <%=error%>
-    </div>
-    <%}%>
-    <form id ="registrationForm" method="post">
-        <div class="mb-3">
-            <label for="exampleInputEmail1" class="form-label" >Email address</label>
-            <input type="email" class="form-control e-mail input" id="exampleInputEmail1"  name="email" aria-describedby="emailHelp" placeholder="">
-            <div  class="form-text form-text-email"></div>
-        </div>
-        <div class="mb-3">
-            <label for="exampleInputPassword1" class="form-label" >Password</label>
-            <input type="password" class="form-control password input" name="password"  id="exampleInputPassword1">
-            <div class="form-text form-text-pass">Make a strong password</div>
 
-        </div>
-        <button  class="btn btn-primary">Submit</button>
-        <a href="register" id="dont_have">don't have an account?</a>
-        <a href="/login/google" class="button">Sign in with Google</a>
-    </form>
-</div>
-<script>
-    document.getElementById('dont_have').addEventListener('click', ()=>{
-        window.location.replace('/login')
-    })
-</script>
-<script src="https://apis.google.com/js/platform.js" async defer></script>
-<script type="module" src="/static/scripts/registration/login_front.js"></script>
+<body class="d-flex justify-content-center align-items-center">
+    <div class="registration_container">
+        <!--            <h1 class="registration_intro">-->
+        <!--                Create An Account</h1>-->
+        <!--            <div class="registration_title">Create an account to enjoy all the services without any ads for free!</div>-->
+        <!--            <form>-->
+        <!--                <input type = "email" name="email" class="input input_email" placeholder="Email">-->
+        <!--                <input type = "password" name="password" class="input input_password" placeholder="password">-->
+        <!--            </form>-->
+        <h1 class="heading">Login</h1>
+        <% if(typeof success_msg !== 'undefined'){ %>
+            <div class="alert alert-success alert-dismissible fade show" role="alert" style="width: fit-content; height: fit-content; padding: 0">
+                <%=success_msg%>
+            </div>
+            <%}%>
+                <% if(typeof error !== 'undefined'){ %>
+                    <div class="alert alert-danger" role="alert" style="width: fit-content; height: fit-content; padding: 0">
+                        <%=error%>
+                    </div>
+                    <%}%>
+                        <form id="registrationForm" method="post">
+                            <div class="mb-3">
+                                <label for="exampleInputEmail1" class="form-label">Email address</label>
+                                <input type="email" class="form-control e-mail input" id="exampleInputEmail1" name="email" aria-describedby="emailHelp" placeholder="">
+                                <div class="form-text form-text-email"></div>
+                            </div>
+                            <div class="mb-3">
+                                <label for="exampleInputPassword1" class="form-label">Password</label>
+                                <input type="password" class="form-control password input" name="password" id="exampleInputPassword1">
+                                <div class="form-text form-text-pass">Make a strong password</div>
+
+                            </div>
+                            <button class="btn btn-primary">Submit</button>
+                            <a href="register" id="dont_have">don't have an account?</a>
+                            <a href="/login/google" class="button">Sign in with Google</a>
+                        </form>
+    </div>
+    <script>
+        document.getElementById('dont_have').addEventListener('click', () => {
+            window.location.replace('/login')
+        })
+    </script>
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <script type="module" src="/static/scripts/registration/login_front.js"></script>
 </body>
+
 </html>
