--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,89 +1,94 @@
-
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="icon" type="image/png" href="/static/shopping-mall-icon-16-167840.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <style>
-    *{
+    * {
         margin: 0;
         padding: 0;
     }
-
-body{
-    margin:0;
-    padding: 0;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: rgb(9,121,97);
-    background: linear-gradient(90deg, rgba(9,121,97,1) 0%, rgba(2,0,36,1) 41%, rgba(8,97,85,1) 91%);
-    background-size: 100%;
-}
-.registration_container{
-    background-color: #f5f5dc;
-    width:35%;
-    border-radius: 10px;
-    padding: 0px 70px 35px 70px;
-}
-.interaction {
-    display: flex;
-    flex-direction: column;
-}
-h1{
-    text-align: center;
-}
-
+    
+    body {
+        margin: 0;
+        padding: 0;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background: rgb(9, 121, 97);
+        background: linear-gradient(90deg, rgba(9, 121, 97, 1) 0%, rgba(2, 0, 36, 1) 41%, rgba(8, 97, 85, 1) 91%);
+        background-size: 100%;
+    }
+    
+    .registration_container {
+        background-color: #f5f5dc;
+        width: 35%;
+        border-radius: 10px;
+        padding: 0px 70px 35px 70px;
+    }
+    
+    .interaction {
+        display: flex;
+        flex-direction: column;
+    }
+    
+    h1 {
+        text-align: center;
+    }
 </style>
+
 <body>
     <div class="registration_container">
         <h1 class="heading mb-4 mt-4">Registration</h1>
         <% if(typeof errors !=='undefined') { %>
-        <%errors.forEach((error)=>{ %>
-        <div class="alert alert-danger" role="alert">
-            <% if(error!=='undefined')%>
-            <%=error.msg%>
-        </div>
-        <%})}%>
+            <%errors.forEach((error)=>{ %>
+                <div class="alert alert-danger" role="alert">
+                    <% if(error!=='undefined')%>
+                        <%=error.msg%>
+                </div>
+                <%})}%>
 
-        <form id ="registrationForm">
-            <div class="mb-3">
-                <label for="exampleInputEmail1" class="form-label" >Name</label>
-                <input type="text" class="form-control input"  name="name" aria-describedby="emailHelp" placeholder="" value="<%=typeof name !='undefined'?email :''%>">
-                <div class="form-text form-text-username"></div>
-            </div>
-            <div class="mb-3">
-                <label for="exampleInputEmail1" class="form-label" >Email</label>
-                <input type="email" class="form-control e-mail input" id="exampleInputEmail1"  name="email" aria-describedby="emailHelp" placeholder="example@gmail.com" value="<%=typeof email !='undefined'?email :''%>">
+                    <form id="registrationForm">
+                        <div class="mb-3">
+                            <label for="exampleInputEmail1" class="form-label">Name</label>
+                            <input type="text" class="form-control input" name="name" aria-describedby="emailHelp" placeholder="" value="<%=typeof name !='undefined'?email :''%>">
+                            <div class="form-text form-text-username"></div>
+                        </div>
+                        <div class="mb-3">
+                            <label for="exampleInputEmail1" class="form-label">Email</label>
+                            <input type="email" class="form-control e-mail input" id="exampleInputEmail1" name="email" aria-describedby="emailHelp" placeholder="example@gmail.com" value="<%=typeof email !='undefined'?email :''%>">
 
-            </div>
-            <div class="mb-3">
-                <label for="exampleInputPassword1" class="form-label" >Password</label>
-                <input type="password" class="form-control password input" name="password"  id="exampleInputPassword1">
-                <div class="form-text form-text-pass">Make a strong password</div>
-            </div>
-            <div class="mb-3">
-                <label for="exampleInputPassword1" class="form-label" >Repeat password</label>
-                <input type="password" class="form-control password password2 input" name="password2" id="exampleInputPassword2">
-                <div class="form-text form-text-pass-dubl">Passwords must match</div>
+                        </div>
+                        <div class="mb-3">
+                            <label for="exampleInputPassword1" class="form-label">Password</label>
+                            <input type="password" class="form-control password input" name="password" id="exampleInputPassword1">
+                            <div class="form-text form-text-pass">Make a strong password</div>
+                        </div>
+                        <div class="mb-3">
+                            <label for="exampleInputPassword1" class="form-label">Repeat password</label>
+                            <input type="password" class="form-control password password2 input" name="password2" id="exampleInputPassword2">
+                            <div class="form-text form-text-pass-dubl">Passwords must match</div>
 
-           </div>
-            <div class="interaction">
-                <button formmethod="post" class="btn btn-primary mb-2">Submit</button>
-                <a href="login" id="alreadyHave" class="align-self-center">Already have an account?</a>
-            </div>
-        </form>
+                        </div>
+                        <div class="interaction">
+                            <button formmethod="post" class="btn btn-primary mb-2">Submit</button>
+                            <a href="login" id="alreadyHave" class="align-self-center">Already have an account?</a>
+                        </div>
+                    </form>
     </div>
-    <script type="module" src ="/static/scripts/registration/register_front.js"></script>
+    <script type="module" src="/static/scripts/registration/register_front.js"></script>
     <script>
         const alink = document.getElementById('alreadyHave');
-        alink.onclick =()=>{
+        alink.onclick = () => {
             window.location.replace(`/${alink.getAttribute('href')}`);
             alert(alink.getAttribute('href'));
         }
     </script>
 </body>
+
 </html>
