--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -1,44 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+    <link rel="icon" type="image/png" href="/static/shopping-mall-icon-16-167840.png">
     <meta charset="UTF-8">
     <title>Title</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <style>
-        body{
-
+        body {
             display: flex;
             align-items: center;
-            background: linear-gradient(90deg, rgba(9,121,97,1) 0%, rgba(2,0,36,1) 41%, rgba(8,97,85,1) 91%);
+            background: linear-gradient(90deg, rgba(9, 121, 97, 1) 0%, rgba(2, 0, 36, 1) 41%, rgba(8, 97, 85, 1) 91%);
             background-size: 100%;
         }
-        .container{
+        
+        .container {
             border-radius: 15px;
             padding: 20px 20px;
             background: #FFFFFF;
         }
     </style>
 </head>
+
 <body>
-<div class="container container-sm">
-    <form action="/upload" method="post" enctype="multipart/form-data">
-    <h2 class="title">Adding job request menu</h2>
-<div class="mb-3">
-    <label for="exampleFormControlInput1" class="form-label">TITLE</label>
-    <input type="text" name="title" class="form-control" id="exampleFormControlInput1" placeholder="We need a...">
-</div>
-    <div class="mb-3">
-        <label for="exampleFormControl" class="form-label">Name of company</label>
-        <input type="text" name="name" class="form-control" id="exampleFormControl" placeholder="Enter a name of company">
-    </div>
-<div class="mb-3">
-    <label for="exampleFormControlTextarea1" class="form-label">Details</label>
-    <textarea class="form-control" name="text" id="exampleFormControlTextarea1" rows="3"></textarea>
-</div>
+    <div class="container container-sm">
+        <form action="/upload" method="post" enctype="multipart/form-data">
+            <h2 class="title">Adding job request menu</h2>
+            <div class="mb-3">
+                <label for="exampleFormControlInput1" class="form-label">TITLE</label>
+                <input type="text" name="title" class="form-control" id="exampleFormControlInput1" placeholder="We need a...">
+            </div>
+            <div class="mb-3">
+                <label for="exampleFormControl" class="form-label">Name of company</label>
+                <input type="text" name="name" class="form-control" id="exampleFormControl" placeholder="Enter a name of company">
+            </div>
+            <div class="mb-3">
+                <label for="exampleFormControlTextarea1" class="form-label">Details</label>
+                <textarea class="form-control" name="text" id="exampleFormControlTextarea1" rows="3"></textarea>
+            </div>
+            <div class="mb-3">
+                <label for="formFileMultiple" class="form-label">Multiple files input example</label>
+                <input class="form-control" name="files" type="file" id="formFileMultiple" multiple>
+            </div>
 
-
-        <select class="form-select mt-5 mb-5" name="sphere" id="selectSP" aria-label="Default select example">
+            <select class="form-select mt-5 mb-5" name="sphere" id="selectSP" aria-label="Default select example">
             <option selected value="null">Sphere</option>
             <option value="IT">IT</option>
             <option value="Business">Business</option>
@@ -46,35 +52,36 @@
             <option value="Podrabotka">Podrabotka</option>
         </select>
 
-        <select class="form-select mb-5" name="type" id="selectPr" aria-label="Default select example">
+            <select class="form-select mb-5" name="type" id="selectPr" aria-label="Default select example">
             <option selected value="null">Privateness</option>
             <option value="private">private</option>
             <option value="not private">not private</option>
             <option value="dont care">dont care</option>
         </select>
 
-        <select class="form-select" name="city" id="selectCi" aria-label="Default select example">
+            <select class="form-select" name="city" id="selectCi" aria-label="Default select example">
             <option selected value="null">City</option>
             <option value="NurSultan">NurSultan</option>
             <option value="Aktobe">Aktobe</option>
             <option value="Almata">Almata</option>
         </select>
 
-        <div class="mt-5 mb-5">
-            <input type="number" name="salary" class="form-control" id="exampleFormControl" placeholder="salary">
-        </div>
-    <button type="submit" class="btn btn-primary">Send</button>
-    </form>
-    <% if(typeof Uerrors !=='undefined') { %>
-    <%Uerrors.forEach((error)=>{ %>
-        <div class="alert alert-danger" role="alert">
-            <% if(error!=='undefined')%>
-            <%=error.msg%>
-        </div>
-    <%})}%>
-</div>
-</div>
+            <div class="mt-5 mb-5">
+                <input type="number" name="salary" class="form-control" id="exampleFormControl" placeholder="salary">
+            </div>
+            <button type="submit" class="btn btn-primary">Send</button>
+        </form>
+        <% if(typeof Uerrors !=='undefined') { %>
+            <%Uerrors.forEach((error)=>{ %>
+                <div class="alert alert-danger" role="alert">
+                    <% if(error!=='undefined')%>
+                        <%=error.msg%>
+                </div>
+                <%})}%>
+    </div>
+    </div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
+
 </html>
