--- a/views/vakansuu.ejs
+++ b/views/vakansuu.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <link rel="icon" type="image/png" href="/static/shopping-mall-icon-16-167840.png">
     <meta charset="UTF-8">
     <title>Vacancies</title>
     <link rel="stylesheet" href="/static/styles/vak.css" type="text/css">
