--- a/public/styles/vak.css
+++ b/public/styles/vak.css
@@ -10,7 +10,10 @@ body {
     background: linear-gradient(90deg, rgba(9,121,97,1) 0%, rgba(2,0,36,1) 41%, rgba(8,97,85,1) 91%);
     background-size: 100%;
 }
+.suggest-item:hover{
+    cursor:pointer;
 
+}
 .ibg {
     position: relative;
 }
