--- a/views/index.ejs
+++ b/views/index.ejs
@@ -51,7 +51,7 @@
                     <li class="nav-item dropdown">
                         <div class="d-flex">
                             <%if(res.avatar.image){ %>
-                                <img src="/userpage/image/<%=res.name%>" style="width:50px; height:50px;">
+                                <img src="/userpage/image/<%=res.email%>" style="width:50px; height:50px;">
                                 <%}else{%>
                                     <img src="/static/assets/userpage/blank-avatar.jpg" style="width:50px; height:50px;">
                                     <%}%>
